Modified the P1LagrangeInterpolation API and made apparent the graph Typos
Trailng space

--- a/python/src/EnclosingSimplexAlgorithmImplementation_doc.i.in
+++ b/python/src/EnclosingSimplexAlgorithmImplementation_doc.i.in
@@ -46,6 +46,8 @@ here is how the derived class is selected:
   :class:`~openturns.BoundingVolumeHierarchy` algorithm is chosen, otherwise
   it is :class:`~openturns.NaiveEnclosingSimplex`.
 
+By default, the algorithm is :class:`~openturns.BoundingVolumeHierarchy`.
+
 See also
 --------
 NaiveEnclosingSimplex, BoundingVolumeHierarchy, RegularGridEnclosingSimplex,
