GPR: Fix GPRResult.getTrendCoef doc

--- a/python/src/GaussianProcessFitterResult_doc.i.in
+++ b/python/src/GaussianProcessFitterResult_doc.i.in
@@ -196,7 +196,7 @@ the size of the functional basis. The column :math:`k` is defined as:
 
 Returns
 -------
-trendCoef : sequence of float
+trendCoef : :class:`~openturns.Point`
     The trend coefficients vectors :math:`(\vect{\beta}^1, \dots, \vect{\beta}^{\outputDim})` as a :class:`~openturns.Point`.
 
 Notes
