--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -423,30 +423,29 @@ endif ()
 
 # Find system prerequisites
 include (CheckIncludeFile)
-check_include_file (dlfcn.h       OPENTURNS_HAVE_DLFCN_H      )
-
 include (CheckFunctionExists)
-if (OPENTURNS_HAVE_DLFCN_H AND UNIX)
-  find_library (LIBDL_LIBRARIES NAMES dl)
-  mark_as_advanced (LIBDL_LIBRARIES)
-  if (LIBDL_LIBRARIES)
-    set (CMAKE_REQUIRED_LIBRARIES ${LIBDL_LIBRARIES})
-    check_function_exists (dladdr OPENTURNS_HAVE_DLADDR)
-    set (CMAKE_REQUIRED_LIBRARIES)
-    if (OPENTURNS_HAVE_DLADDR)
-      list (APPEND OPENTURNS_PRIVATE_LIBRARIES ${LIBDL_LIBRARIES})
-    endif ()
+include (CMakePushCheckState)
+
+check_include_file (dlfcn.h OPENTURNS_HAVE_DLFCN_H)
+if (CMAKE_DL_LIBS)
+  cmake_push_check_state (RESET)
+  set (CMAKE_REQUIRED_LIBRARIES ${CMAKE_DL_LIBS})
+  check_function_exists (dladdr OPENTURNS_HAVE_DLADDR)
+  cmake_pop_check_state ()
+  if (OPENTURNS_HAVE_DLADDR)
+    list (APPEND OPENTURNS_PRIVATE_LIBRARIES ${CMAKE_DL_LIBS})
   endif ()
 endif ()
 
 if (USE_OPENBLAS)
+  cmake_push_check_state (RESET)
   set (CMAKE_REQUIRED_LIBRARIES ${LAPACK_LIBRARIES})
   check_function_exists("openblas_set_num_threads" OPENTURNS_HAVE_OPENBLAS_SET_NUM_THREADS)
   check_function_exists("goto_get_num_procs" OPENTURNS_HAVE_GOTO_GET_NUM_PROCS)
+  cmake_pop_check_state ()
   if (OPENTURNS_HAVE_OPENBLAS_SET_NUM_THREADS AND OPENTURNS_HAVE_GOTO_GET_NUM_PROCS)
     set (OPENTURNS_HAVE_OPENBLAS TRUE)
   endif ()
-  set (CMAKE_REQUIRED_LIBRARIES)
 endif ()
 
 # Some useful macros to ease CMakeLists.txt file writing
