--- a/python/src/SoizeGhanemFactory_doc.i.in
+++ b/python/src/SoizeGhanemFactory_doc.i.in
@@ -25,7 +25,7 @@ This class implements the multivariate orthonormal basis associated with an arbi
 
 See also
 --------
-StandardDistributionPolynomialFactory, OrthogonalProductPolynomialFactory
+    StandardDistributionPolynomialFactory, OrthogonalProductPolynomialFactory, experimental.FiniteOrthogonalFunctionFactory
 
 Examples
 --------
