--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -714,6 +714,7 @@ ot_pyinstallcheck_test (LaguerreFactory_std)
 ot_pyinstallcheck_test (LegendreFactory_std)
 ot_pyinstallcheck_test (MeixnerFactory_std)
 ot_pyinstallcheck_test (SoizeGhanemFactory_std)
+ot_pyinstallcheck_test (FiniteOrthogonalFunctionFactory_std)
 ot_pyinstallcheck_test (OrthonormalizationAlgorithm_std)
 ot_pyinstallcheck_test (AdaptiveStieltjesAlgorithm_std)
 ot_pyinstallcheck_test (StandardDistributionPolynomialFactory_std IGNOREOUT)
