CMake: Disable export_metamodel example

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -879,6 +879,7 @@ if (MATPLOTLIB_FOUND)
   endif ()
   if (NOT LIBXML2_FOUND OR NOT HDF5_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_study_save_load PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_export_metamodel PROPERTIES DISABLED TRUE)
   endif ()
   if (NOT NLopt_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_ego PROPERTIES DISABLED TRUE)
