--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -940,9 +940,10 @@
   <GaussianProcessFitter-UnbiasedVariance                       value_bool="true"      />
   <GaussianProcessFitter-UseAnalyticalAmplitudeEstimate         value_bool="true"      />
   <GaussianProcessFitter-DefaultOptimizationLowerBound          value_float="1.0e-2"  />
-  <GaussianProcessFitter-DefaultOptimizationScaleFactor         value_float="2.0"     />
   <GaussianProcessFitter-DefaultOptimizationUpperBound          value_float="1.0e2"   />
   <GaussianProcessFitter-DefaultOptimizationNuggetLowerBound    value_float="1.0e-12"   />
+  <GaussianProcessFitter-OptimizationLowerBoundScaleFactor      value_float="1.0e-3" />
+  <GaussianProcessFitter-OptimizationUpperBoundScaleFactor      value_float="2.0" />
   <GaussianProcessFitter-DefaultOptimizationAlgorithm           value_str="Cobyla"     />
   <GaussianProcessFitter-LinearAlgebra                          value_str="LAPACK"  />
 
