--- a/distro/debian/rules
+++ b/distro/debian/rules
@@ -53,7 +53,7 @@ override_dh_auto_install:
 	dh_auto_install -Bbuilddir
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 	eval "LD_LIBRARY_PATH=$${LD_LIBRARY_PATH:+$${LD_LIBRARY_PATH}:}$(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH) \
-	  $(MAKE) $(test_makeflags) -C builddir test ARGS=\"$(test_makeflags) $(test_discardflags) -R pyinstallcheck --output-on-failure --schedule-random\""
+	  $(MAKE) $(test_makeflags) -C builddir test ARGS=\"$(test_makeflags) $(test_discardflags) -R pyinstallcheck --output-on-failure --schedule-random --timeout 500\""
 endif
 
 override_dh_auto_test:
