CMake: Fix transitive dependencies detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,16 +184,25 @@ if (TBB_FOUND)
 endif ()
 
 if (USE_MUPARSER)
-  find_package (muParser 2.2.3 QUIET)
+  find_package (muparser 2.2.3 CONFIG)
+  if (muparser_FOUND)
+    set (MUPARSER_LIBRARIES muparser::muparser)
+  else ()
+    # fallback to our macro
+    find_package (muparser 2.2.3 MODULE QUIET)
+  endif ()
 endif ()
-if (MUPARSER_FOUND)
+if (muparser_FOUND)
   set (OPENTURNS_HAVE_MUPARSER TRUE)
   set (OPENTURNS_HAVE_ANALYTICAL_PARSER TRUE)
   list (APPEND OPENTURNS_PRIVATE_LIBRARIES ${MUPARSER_LIBRARIES})
-  list (APPEND OPENTURNS_PRIVATE_INCLUDE_DIRS ${MUPARSER_INCLUDE_DIRS})
+  if (MUPARSER_INCLUDE_DIRS)
+    list (APPEND OPENTURNS_PRIVATE_INCLUDE_DIRS ${MUPARSER_INCLUDE_DIRS})
+  endif ()
   list (APPEND OPENTURNS_ENABLED_FEATURES "muparser")
   set (SYMBOLICPARSER_DEFAULT_BACKEND MuParser)
 endif ()
+
 if (USE_EXPRTK)
   set (OPENTURNS_HAVE_EXPRTK TRUE)
   set (OPENTURNS_HAVE_ANALYTICAL_PARSER TRUE)
@@ -303,8 +312,12 @@ endif ()
 
 if (USE_CERES)
   find_package (Ceres CONFIG)
-  if (CERES_USES_MINIGLOG)
+  if (Ceres_FOUND AND CERES_USES_MINIGLOG)
     message (STATUS "Ceres was built with miniglog and will likely leak logs to stderr (prefer glog), disabling.")
+    set (Ceres_FOUND FALSE)
+  endif ()
+  if (Ceres_FOUND AND "SuiteSparse" IN_LIST CERES_COMPILED_COMPONENTS)
+    message (STATUS "Ceres was built with SuiteSparse GPL components, disabling.")
     set (Ceres_FOUND FALSE)
   endif ()
   if (Ceres_FOUND)
@@ -351,7 +364,7 @@ endif ()
 if (USE_HIGHS)
   find_package (highs CONFIG)
   if (highs_FOUND)
-    message (STATUS "Found HiGHS: ${highs_DIR}")
+    message (STATUS "Found HiGHS: ${highs_DIR} (found version \"${HIGHS_VERSION}\")")
     set (OPENTURNS_HAVE_HIGHS TRUE)
     list (APPEND OPENTURNS_PRIVATE_LIBRARIES highs::highs)
   endif ()
