--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -87,6 +87,7 @@ imgmath_embed = True
 
 extensions.append("matplotlib.sphinxext.plot_directive")
 plot_formats = ["svg"]
+plot_pre_code = "import openturns as ot; ot.ResourceMap.Reset(); ot.RandomGenerator.Reset()"
 
 extensions.append("sphinx_copybutton")
 copybutton_exclude = ".linenos, .gp"
