--- a/python/src/GammaFactory_doc.i.in
+++ b/python/src/GammaFactory_doc.i.in
@@ -76,7 +76,7 @@ Determine the right unilateral confidence interval al level 0.9:
 Determine the left unilateral confidence interval al level 0.9:
 
 >>> confInt, level = paramDist.computeUnilateralConfidenceIntervalWithMarginalProbability(0.9, True)
->>> ot.ResourceMap.Reload()
+>>> ot.ResourceMap.Reset()
 "
 // ---------------------------------------------------------------------
 
