--- a/python/src/ResourceMap_doc.i.in
+++ b/python/src/ResourceMap_doc.i.in
@@ -465,8 +465,8 @@ hasStringEnum : bool
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::ResourceMap::Reload
-"Reload the configuration.
+%feature("docstring") OT::ResourceMap::Reset
+"Reset the configuration.
 
 Reverts the values of the default keys and erases new keys."
 
