Log: Add Reset method

--- a/python/src/Log_doc.i.in
+++ b/python/src/Log_doc.i.in
@@ -224,3 +224,9 @@ Returns
 -------
 has_log : bool
     Whether the level is enabled"
+
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Log::Reset
+"Reset settings."
