--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,18 +7,17 @@ jobs:
     runs-on: macos-latest
     env:
       MAKEFLAGS: -j3
-      LDFLAGS: -L/opt/homebrew/opt/openblas/lib
-      CPPFLAGS: -I/opt/homebrew/opt/openblas/include
       OPENTURNS_NUM_THREADS: 2
       OMP_NUM_THREADS: 1
     steps:
     - uses: actions/checkout@v4
     - run: |
-        brew install openblas swig boost tbb nlopt cminpack ceres-solver cuba dlib hdf5 highs ipopt primesieve spectra pagmo nanoflann
+        brew install openblas swig boost tbb nlopt cminpack ceres-solver dlib hdf5 highs ipopt primesieve spectra pagmo libxml2 nanoflann cuba
         pip3 install matplotlib scipy chaospy pandas dill --break-system-packages
     - run: |
         cmake \
         -DCMAKE_INSTALL_PREFIX=~/.local \
+        -DCMAKE_PREFIX_PATH="/opt/homebrew/opt/openblas;/opt/homebrew/opt/libxml2" \
         -DPython_EXECUTABLE=/opt/homebrew/bin/python3 \
         -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror" \
         -DCMAKE_SWIG_FLAGS="-Werror" -DSWIG_COMPILE_FLAGS="-O1 -Wno-unused-parameter -Wno-unused-function" \
