--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ option (USE_PRIMESIEVE               "Use primesieve for prime numbers generatio
 option (USE_OPENMP                   "Use OpenMP to disable threading"                                       ${USE_EXTERNAL_LIBS})
 option (USE_OPENBLAS                 "Use OpenBLAS to disable threading"                                     ${USE_EXTERNAL_LIBS})
 option (USE_NANOFLANN                "Use nanoflann for Nearest Neighbor search"                             ${USE_EXTERNAL_LIBS})
+option (USE_QHULL                    "Use QHull for meshing algorithms"                                      ${USE_EXTERNAL_LIBS})
 
 option (BUILD_PYTHON                 "Build the python module for the library"                               ON)
 option (BUILD_SHARED_LIBS            "Build shared libraries"                                                ON)
@@ -348,6 +349,16 @@ if (USE_NANOFLANN)
     set (OPENTURNS_HAVE_NANOFLANN TRUE)
     list (APPEND OPENTURNS_PRIVATE_LIBRARIES nanoflann::nanoflann)
     list (APPEND OPENTURNS_ENABLED_FEATURES "nanoflann")
+  endif ()
+endif ()
+
+if (USE_QHULL)
+  find_package (Qhull MODULE)
+  if (Qhull_FOUND)
+  # add_definitions("-Dqh_QHpointer")
+    set (OPENTURNS_HAVE_QHULL TRUE)
+    list (APPEND OPENTURNS_PRIVATE_LIBRARIES ${QHULL_LIBRARIES})
+    list (APPEND OPENTURNS_ENABLED_FEATURES "qhull")
   endif ()
 endif ()
 
