--- a/lib/src/Base/Geom/CMakeLists.txt
+++ b/lib/src/Base/Geom/CMakeLists.txt
@@ -12,6 +12,7 @@ ot_add_source_file (LevelSetMesher.cxx)
 ot_add_source_file (Mesh.cxx)
 ot_add_source_file (MeshDomain.cxx)
 ot_add_source_file (BoundaryMesher.cxx)
+ot_add_source_file (ConvexHullMesher.cxx)
 ot_add_source_file (RegularGrid.cxx)
 ot_add_source_file (DomainComplement.cxx)
 ot_add_source_file (DomainIntersection.cxx)
@@ -29,6 +30,7 @@ ot_install_header_file (LevelSetMesher.hxx)
 ot_install_header_file (Mesh.hxx)
 ot_install_header_file (MeshDomain.hxx)
 ot_install_header_file (BoundaryMesher.hxx)
+ot_install_header_file (ConvexHullMesher.hxx)
 ot_install_header_file (RegularGrid.hxx)
 ot_install_header_file (DomainComplement.hxx)
 ot_install_header_file (DomainIntersection.hxx)
